--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -23,15 +23,18 @@
 
     <TextView
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView_login" android:text="@string/text_login"/>
+    <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="@string/nav_header_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/textView_username"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nav_header_subtitle"
-            android:id="@+id/textView"/>
+            android:id="@+id/textView_userEmail"/>
 
 </LinearLayout>
