--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,14 +10,15 @@
         tools:context=".MainActivity"
         android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill"
-        app:tabIndicatorColor="@color/colorAccent"
-        android:id="@+id/tabLayout"
-        />
+    <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/lightBlue"
+            android:id="@+id/tabLayout"
+            android:background="@color/darkBlue"
+            app:tabTextColor="@color/lightestBlue"/>
 
         <android.support.v4.view.ViewPager
         android:layout_width="wrap_content"
