--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -3,12 +3,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".ScheduleFragment" android:background="@color/colorAccent">
+             tools:context=".ScheduleFragment"
+             android:background="@color/darkestBlue">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text=""/>
-
+            android:id="@+id/recyclerView_schedule"/>
 </FrameLayout>
