--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="margin_cardView">5dp</dimen>
+    <dimen name="textSize_noConnection">20sp</dimen>
+    <dimen name="card_view_padding">10dp</dimen>
 </resources>
