--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -3,43 +3,68 @@
               xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@android:color/white">
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
+            app:cardBackgroundColor="@android:color/white" android:layout_marginBottom="@dimen/margin_cardView">
 
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:text="vrijeme"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3"
+                        android:layout_weight="1"
+                        android:textSize="17sp"
+                        android:padding="5dp"/>
+            </LinearLayout>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/darkestBlue"
+                    android:layout_margin="5dp"/>
+            <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_eventDate"
-                    android:layout_weight="0.3"
-                    android:textColor="@color/darkBlue"
-                    android:background="@color/lightestBlue" android:padding="@dimen/card_view_padding"
-                    android:textAlignment="center"/>
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_eventName"
-                    android:layout_weight="0.5"
-                    android:textColor="@color/darkBlue" android:padding="@dimen/card_view_padding"
-                    android:textAlignment="center"/>
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_eventTime"
-                    android:layout_weight="0.2"
-                    android:textColor="@color/darkBlue"
-                    android:background="@color/lightestBlue" android:padding="@dimen/card_view_padding"
-                    android:textAlignment="center"/>
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_eventDate"
+                        android:layout_weight="0.3"
+                        android:textColor="@color/darkBlue"
+                        android:background="@color/lightestBlue" android:padding="@dimen/card_view_padding"
+                        android:textAlignment="center"/>
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_eventName"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/darkBlue" android:padding="@dimen/card_view_padding"
+                        android:textAlignment="center"/>
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_eventTime"
+                        android:layout_weight="0.2"
+                        android:textColor="@color/darkBlue"
+                        android:background="@color/lightestBlue" android:padding="@dimen/card_view_padding"
+                        android:textAlignment="center"/>
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
