--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <!--  Color palette for app  -->
     <color name="darkestBlue">#091534</color>
+    <color name="betweenDarkBlue">#0F2049</color>
     <color name="darkBlue">#012998</color>
     <color name="blue">#0247FE</color>
     <color name="lightBlue">#678FFE</color>
