--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,6 +9,7 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:paddingLeft="8dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/editText_username_registration" android:layout_marginStart="32dp"
@@ -18,6 +19,7 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:paddingLeft="8dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/editText_email_registration" android:layout_marginTop="24dp"
@@ -28,6 +30,7 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:paddingLeft="8dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editText_password_registration" android:layout_marginTop="24dp"
@@ -36,20 +39,20 @@
             app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
             android:background="@color/lightestBlue" android:hint="Password"/>
     <Button
-            android:text="Button"
+            android:text="REGISTER"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/button_register_registration" android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@+id/editText_password_registration"
             app:layout_constraintStart_toStartOf="@+id/editText_password_registration"
             app:layout_constraintEnd_toEndOf="@+id/editText_password_registration" android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp" android:background="@color/lightBlue"/>
+            android:layout_marginStart="16dp" android:background="@color/lightBlue" android:textSize="18sp"/>
     <TextView
             android:text="Already have an account?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView_alreadyHaveAcc_registration"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/button_register_registration"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_register_registration"
             app:layout_constraintStart_toStartOf="@+id/button_register_registration"
             app:layout_constraintEnd_toEndOf="@+id/button_register_registration" android:textColor="@color/lightBlue"
             android:textSize="18sp"/>
