--- a/app/src/main/res/drawable-anydpi/ic_arrow_right_grayed.xml
+++ b/app/src/main/res/drawable-anydpi/ic_arrow_right_grayed.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#678FFE">
+    android:tint="#DBE5FF">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z"/>
+        android:pathData="M10,6L8.59,7.41 13.17,12l-4.58,4.59L10,18l6,-6z"/>
 </vector>
