--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ScheduleFragment"
@@ -27,23 +27,56 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:gravity="right">
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:id="@+id/linearLayout">
                 <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:id="@+id/imageButton"
+                        android:id="@+id/imageButton_previousDay"
                         android:background="@drawable/ic_arrow_left"/>
-                <TextView
-                        android:text="datum"
+                <android.support.constraint.ConstraintLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView_date"
-                        android:textSize="@dimen/textSize_noConnection"
-                        android:textColor="@android:color/white"/>
+                >
+
+                    <TextView
+                            android:id="@+id/textView_currentDate"
+                            android:text="dan"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/textSize_noConnection"
+                            android:textColor="@color/lightBlue"
+                            android:layout_marginStart="8dp"
+                            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_margin="@dimen/no_margin" android:paddingEnd="3dp"/>
+                    <TextView
+                            android:text="mjesec"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_currentMonth"
+                            android:textSize="@dimen/textSize_weekday"
+                            android:textColor="@color/lightBlue"
+                            app:layout_constraintStart_toEndOf="@+id/textView_currentDate"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                    <TextView
+                            android:text="tjedanDan"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_currentWeekday"
+                            android:textSize="@dimen/textSize_weekday"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_currentMonth"
+                            android:layout_margin="@dimen/no_margin" android:textColor="@color/lightBlue"
+                            app:layout_constraintStart_toEndOf="@+id/textView_currentDate"
+                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                            android:layout_marginEnd="8dp"/>
+                </android.support.constraint.ConstraintLayout>
                 <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:id="@+id/imageButton2"
+                        android:id="@+id/imageButton_nextDay"
                         android:background="@drawable/ic_arrow_right"/>
             </LinearLayout>
         </LinearLayout>
