--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,19 +13,21 @@
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
+            android:paddingLeft="8dp"
             android:id="@+id/editText_email_login" android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="Email" android:background="@color/lightestBlue"/>
+            app:layout_constraintEnd_toEndOf="parent" android:hint="Email" android:background="@drawable/rounded_edittext_login_registration"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
+            android:paddingLeft="8dp"
             android:id="@+id/editText_password_login" android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/editText_email_login"
             app:layout_constraintStart_toStartOf="@+id/editText_email_login"
-            app:layout_constraintEnd_toEndOf="@+id/editText_email_login" android:background="@color/lightestBlue"
+            app:layout_constraintEnd_toEndOf="@+id/editText_email_login" android:background="@drawable/rounded_edittext_login_registration"
             android:hint="Password"/>
     <Button
             android:text="LOG IN"
@@ -35,7 +37,10 @@
             app:layout_constraintTop_toBottomOf="@+id/editText_password_login"
             app:layout_constraintStart_toStartOf="@+id/editText_password_login"
             app:layout_constraintEnd_toEndOf="@+id/editText_password_login" android:textSize="18sp"
-            android:background="@color/lightBlue"/>
+            android:background="@drawable/rounded_button_register_login" android:layout_marginStart="16dp"
+            android:textColor="@color/darkestBlue"
+            android:textStyle="bold"
+            android:layout_marginEnd="16dp"/>
     <TextView
             android:text="Back to login"
             android:layout_width="wrap_content"
