--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,7 +15,7 @@
             android:id="@+id/editText_username_registration" android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="parent" android:hint="Username" android:background="@color/lightestBlue"/>
+            app:layout_constraintTop_toTopOf="parent" android:hint="Username" android:background="@drawable/rounded_edittext_login_registration"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editText_username_registration"
             app:layout_constraintStart_toStartOf="@+id/editText_username_registration"
             app:layout_constraintEnd_toEndOf="@+id/editText_username_registration" android:hint="Email"
-            android:background="@color/lightestBlue"/>
+            android:background="@drawable/rounded_edittext_login_registration"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editText_email_registration"
             app:layout_constraintStart_toStartOf="@+id/editText_email_registration"
             app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
-            android:background="@color/lightestBlue" android:hint="Password"/>
+            android:background="@drawable/rounded_edittext_login_registration" android:hint="Password"/>
     <Button
             android:text="REGISTER"
             android:layout_width="0dp"
@@ -46,7 +46,10 @@
             app:layout_constraintTop_toBottomOf="@+id/editText_password_registration"
             app:layout_constraintStart_toStartOf="@+id/editText_password_registration"
             app:layout_constraintEnd_toEndOf="@+id/editText_password_registration" android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp" android:background="@color/lightBlue" android:textSize="18sp"/>
+            android:layout_marginStart="16dp" android:background="@drawable/rounded_button_register_login"
+            android:textColor="@color/darkestBlue"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
     <TextView
             android:text="Already have an account?"
             android:layout_width="wrap_content"
