Design changes, list of events is now well formatted.

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -18,66 +18,74 @@
                 android:background="@android:color/white"
                 android:padding="5dp">
             <TextView
-                    android:text="npr opening week"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView"
-                    android:textSize="@dimen/textSize_noConnection"
-                    android:textColor="@color/blue"/>
+                    android:textSize="@dimen/textSize_medium"
+                    android:textColor="@color/blue" android:text="@string/textPlaceholder_weekName"
+                    android:textAllCaps="true"/>
             <LinearLayout
+                    android:weightSum="1"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:id="@+id/linearLayout">
+                    android:gravity="end"
+                    android:id="@+id/linearLayout" android:layout_weight="1">
                 <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:id="@+id/imageButton_previousDay"
-                        android:background="@drawable/ic_arrow_left"/>
+                        android:background="@drawable/ic_arrow_left"
+                        android:contentDescription="@string/contentDesc_arrowLeft"/>
                 <android.support.constraint.ConstraintLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                 >
 
                     <TextView
                             android:id="@+id/textView_currentDate"
-                            android:text="dan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/textSize_noConnection"
+                            android:textSize="@dimen/textSize_medium"
                             android:textColor="@color/lightBlue"
                             android:layout_marginStart="8dp"
                             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            android:layout_margin="@dimen/no_margin" android:paddingEnd="3dp"/>
+                            android:layout_margin="@dimen/no_margin" android:textStyle="bold"
+                            android:text="@string/textPlaceholder_currentDay"
+                            app:layout_constraintEnd_toStartOf="@+id/textView_currentWeekday"
+                            android:layout_marginEnd="8dp" android:paddingEnd="@dimen/padding_small"
+                            android:paddingStart="@dimen/padding_small"/>
                     <TextView
-                            android:text="mjesec"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/textView_currentMonth"
-                            android:textSize="@dimen/textSize_weekday"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView_currentMonth"
+                            android:textSize="@dimen/textSize_small"
                             android:textColor="@color/lightBlue"
                             app:layout_constraintStart_toEndOf="@+id/textView_currentDate"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
+                            android:text="@string/textHolder_currentMonth"/>
                     <TextView
-                            android:text="tjedanDan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/textView_currentWeekday"
-                            android:textSize="@dimen/textSize_weekday"
+                            android:textSize="@dimen/textSize_small"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView_currentMonth"
                             android:layout_margin="@dimen/no_margin" android:textColor="@color/lightBlue"
                             app:layout_constraintStart_toEndOf="@+id/textView_currentDate"
                             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginEnd="8dp"/>
+                            android:layout_marginEnd="8dp" android:textStyle="bold"
+                            android:text="@string/textPlaceholder_currentWeekday"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:id="@+id/imageButton_nextDay"
-                        android:background="@drawable/ic_arrow_right"/>
+                        android:background="@drawable/ic_arrow_right"
+                        android:contentDescription="@string/contentDesc_arrowRight"/>
             </LinearLayout>
         </LinearLayout>
         <android.support.v4.widget.SwipeRefreshLayout
