--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,11 @@
     <dimen name="card_view_padding">10dp</dimen>
     <dimen name="textSize_weekday">10sp</dimen>
     <dimen name="no_margin">0dp</dimen>
+    <dimen name="textSize_medium">17sp</dimen>
+    <dimen name="textSize_small">9sp</dimen>
+    <dimen name="textPadding_weekName">5dp</dimen>
+    <dimen name="marginLeft_eventRow">10dp</dimen>
+    <dimen name="margin_small">5dp</dimen>
+    <dimen name="padding_small">3dp</dimen>
+    <dimen name="textSize_eventName">15sp</dimen>
 </resources>
