--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -30,7 +30,8 @@
                 android:id="@+id/editText_username_registration" android:layout_marginStart="32dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
-                android:hint="@string/edittext_username_hint_registration" android:background="@drawable/rounded_edittext_login_registration"
+                android:hint="@string/edittext_username_hint_registration"
+                android:background="@drawable/rounded_edittext_login_registration"
                 app:layout_constraintTop_toBottomOf="@+id/button_select_image_register"/>
         <EditText
                 android:layout_width="0dp"
@@ -41,7 +42,8 @@
                 android:id="@+id/editText_email_registration" android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/editText_username_registration"
                 app:layout_constraintStart_toStartOf="@+id/editText_username_registration"
-                app:layout_constraintEnd_toEndOf="@+id/editText_username_registration" android:hint="@string/edittext_email_hint_registration"
+                app:layout_constraintEnd_toEndOf="@+id/editText_username_registration"
+                android:hint="@string/edittext_email_hint_registration"
                 android:background="@drawable/rounded_edittext_login_registration"/>
         <EditText
                 android:layout_width="0dp"
@@ -53,7 +55,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/editText_email_registration"
                 app:layout_constraintStart_toStartOf="@+id/editText_email_registration"
                 app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
-                android:background="@drawable/rounded_edittext_login_registration" android:hint="@string/edittext_password_hint_registration"/>
+                android:background="@drawable/rounded_edittext_login_registration"
+                android:hint="@string/edittext_password_hint_registration"/>
+
+
+
         <Button
                 android:text="@string/button_register_registration"
                 android:layout_width="0dp"
@@ -66,6 +72,18 @@
                 android:textColor="@color/darkestBlue"
                 android:textStyle="bold"
                 android:textSize="18sp"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleimageview_profile_image_registration"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:civ_border_width="4dp"
+                app:layout_constraintTop_toTopOf="@+id/button_select_image_register"
+                app:layout_constraintBottom_toBottomOf="@+id/button_select_image_register"
+                app:layout_constraintEnd_toEndOf="@+id/button_select_image_register"
+                app:layout_constraintStart_toStartOf="@+id/button_select_image_register"/>
+
+
         <TextView
                 android:text="@string/textview_already_have_an_account_registration"
                 android:layout_width="wrap_content"
