Add event fragment which is replaced with schedule fragment. Clicking on ceratin event in fragment_schedule will redirect it to event_fragment with corresponding CEvent object.

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,7 +4,9 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ScheduleFragment"
-             android:background="@android:color/white">
+             android:background="@android:color/white"
+
+             android:id="@+id/fragment_schedule">
 
 
     <LinearLayout
