--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -7,7 +7,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@android:color/white"
-            android:layout_marginBottom="@dimen/margin_cardView" android:layout_marginTop="@dimen/margin_cardView">
+            android:layout_marginBottom="@dimen/margin_cardView" android:layout_marginTop="@dimen/margin_cardView"
+            android:id="@+id/listItem_event">
 
         <LinearLayout
                 android:orientation="vertical"
@@ -37,7 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="1" android:gravity="center_vertical">
+                    android:weightSum="1" android:gravity="center_vertical" android:id="@+id/layout_eventListItem">
 
                 <ImageView
                         android:layout_width="0dp"
@@ -107,7 +108,8 @@
                                 android:gravity="center_vertical"
                                 android:text="@string/textPlaceholder_eventLocation"
                                 android:layout_marginLeft="@dimen/marginLeft_eventRow"
-                                android:textColor="@color/lightBlue" android:textSize="12sp"
+                                android:textColor="@color/lightBlue"
+                                android:textSize="12sp"
                                 android:textAllCaps="false"/>
                     </TableRow>
                 </TableLayout>
