Add event activity with ViewModel.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#0247FE</color>
     <color name="lightBlue">#678FFE</color>
     <color name="lightestBlue">#DBE5FF</color>
+    <color name="lightBlueWithAlpha">#80678FFE</color>
 </resources>
