--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="fab_margin">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -27,4 +27,5 @@
     <dimen name="textSize_mediumToLarge">20sp</dimen>
     <dimen name="padding_mediumToLarge">10dp</dimen>
     <dimen name="smallest_spacing">1dp</dimen>
+    <dimen name="margin_large">15dp</dimen>
 </resources>
