--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -100,17 +100,26 @@
                         android:contentDescription="@string/contentDesc_arrowRight"/>
             </LinearLayout>
         </LinearLayout>
-        <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipeRefresh_schedule"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-        android:background="@color/lightestBlue">
-            <android.support.v7.widget.RecyclerView
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/swipeRefresh_schedule"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/recyclerView_schedule"/>
+                    android:background="@color/lightestBlue" android:layout_alignParentTop="true">
+                <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/recyclerView_schedule"/>
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+            </android.support.v4.widget.SwipeRefreshLayout>
+            <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fragment_schedule_progress_bar" android:layout_centerInParent="true"
+            />
+        </RelativeLayout>
+
     </LinearLayout>
 
 </FrameLayout>
